--- a/AmazonWeb/Views/Shared/_Layout.cshtml
+++ b/AmazonWeb/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.tiny.cloud/1/sh50d9vwwt0p2s5xrx8a9cfly4m4gzj0ytgjlg09dhk7t4uv/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
