--- a/AmazonWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/AmazonWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,7 +1,6 @@
 ﻿@model ProductVM
 <form method="post" enctype="multipart/form-data">
     <input asp-for="Product.Id" hidden />
-    <input asp-for="Product.ImageUrl" hidden />
     <div class="row">
         <div class="col-10">
             <div class="row p-3 mt-4">
@@ -57,8 +56,8 @@
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
                 <div class="mb-3 row p-1">
-                    <label asp-for="Product.ImageUrl" class="p-0"></label>
-                    <input type="file" name="file" class="form-control" />
+                    <label asp-for="Product.ProductImages" class="p-0"></label>
+                    <input type="file" name="files" class="form-control" multiple />
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-3">
@@ -81,10 +80,18 @@
             </div>
         </div>
         <div class="col-2">
-            @if (Model.Product.Id != 0)
+            @if (Model.Product.ProductImages != null)
             {
-                <img src="@Model.Product.ImageUrl" width="100%"
-                     style="border-radius:5px; border:1px solid #bbb9b9" />
+                foreach (var image in Model.Product.ProductImages)
+                {
+                    <div class="border p-1 m-2 text-center">
+                        <img src="@image.ImageUrl" width="100%"
+                            style="border-radius:5px; border:1px solid #bbb9b9"/>
+                            <a asp-action="DeleteImage" class="btn btn-danger" asp-route-imageId="@image.Id">
+                                <i class="bi bi-trash-fill"></i>Delete
+                            </a>
+                    </div>
+                }
             }
         </div>
     </div>
