--- a/AmazonWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/AmazonWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ShoppingCart
 <form method="post">
-    <input hidden asp-for="ProductId"/>
+    <input hidden asp-for="ProductId" />
     <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
@@ -21,7 +21,33 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                        <img src="@Model.Product.ImageUrl" width="100%" class="rounded" />
+                        @if (Model.Product.ProductImages != null && Model.Product.ProductImages.Count > 0)
+                        {
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    @foreach (var imageWithIndex in Model.Product.ProductImages.Select((image, index) => new { ProductImage = image, Index = index }))
+                                    {
+                                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="@imageWithIndex.Index" class="@(imageWithIndex.Index == 0?"active":"")"></button>
+                                    }
+                                </ol>
+                                <div class="carousel-inner">
+                                    @foreach (var imageWithIndex in Model.Product.ProductImages.Select((image, index) => new { ProductImage = image, Index = index }))
+                                    {
+                                        <div class="@(imageWithIndex.Index == 0?"carousel-item active":"carousel-item")">
+                                            <img class="d-block w-100" src="@imageWithIndex.ProductImage.ImageUrl" alt="First slide">
+                                        </div>
+                                    }
+                                </div>
+                                <button type="button" class="carousel-control-prev" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button type="button" class="carousel-control-next" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        }
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
