--- a/AmazonWeb/wwwroot/css/site.css
+++ b/AmazonWeb/wwwroot/css/site.css
@@ -2,6 +2,32 @@ html {
     font-size: 14px;
 }
 
+.floating-button {
+    position: fixed;
+    top: 200px; /* adjust as needed */
+    right: 0px; /* adjust as needed */
+    z-index: 1000; /* ensure it's above other elements */
+}
+
+    .floating-button button {
+        padding: 10px 20px;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+        .floating-button button:hover {
+            background-color: #0056b3;
+        }
+
+.modal-dialog {
+    position: relative;
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+}
 .divider-text:before,
 .divider-text:after {
     color: white;
