--- a/AmazonWeb/Views/Shared/_Layout.cshtml
+++ b/AmazonWeb/Views/Shared/_Layout.cshtml
@@ -16,10 +16,10 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-toggleable-sm bg-primary border-bottom box-shadow mb-3" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-sm bg-dark border-bottom box-shadow mb-3" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/book.png" width="30px" />
+                    <img src="~/images/Amazon_icon.png" width="30px" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
