--- a/AmazonWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/AmazonWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -55,10 +55,10 @@
                             <span class="badge">@Model.Product.Category.Name</span>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50 ">ISBN : @Model.Product.ISBN</h6>
+                            <h6 class="text-dark text-opacity ">ISBN : @Model.Product.ISBN</h6>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50  pb-2">
+                            <h6 class="text-dark text-opacity  pb-2">
                                 List Price:
                                 <span class="text-decoration-line-through">
                                     @Model.Product.ListPrice.ToString("c")
@@ -66,35 +66,35 @@
                             </h6>
                         </div>
                         <div class="row text-center ps-2">
-                            <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
-                                <div class="text-dark text-opacity-50 fw-semibold">Quantity</div>
+                            <div class="p-1 col-3 col-lg-2 bg-light border-bottom">
+                                <div class="text-dark text-opacity fw-semibold">Quantity</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
+                            <div class="p-1 col-3 col-lg-2 bg-light border-bottom">
                                 <div class="text-dark text-opacity-50 fw-semibold">1-50</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
+                            <div class="p-1 col-3 col-lg-2 bg-light border-bottom">
                                 <div class="text-dark text-opacity-50 fw-semibold">51-100</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
+                            <div class="p-1 col-3 col-lg-2 bg-light border-bottom">
                                 <div class="text-dark text-opacity-50 fw-semibold">100+</div>
                             </div>
                         </div>
                         <div class="row text-center ps-2">
-                            <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
+                            <div class="p-1 col-3 col-lg-2 bg-body-tertiary text-warning fw-bold">
                                 <div>Price</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
+                            <div class="p-1 col-3 col-lg-2 bg-body-tertiary text-warning fw-bold">
                                 <div>@Model.Product.Price.ToString("c")</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
+                            <div class="p-1 col-3 col-lg-2 bg-body-tertiary text-warning fw-bold">
                                 <div>@Model.Product.Price50.ToString("c")</div>
                             </div>
-                            <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
+                            <div class="p-1 col-3 col-lg-2 bg-body-tertiary text-warning fw-bold">
                                 <div>@Model.Product.Price100.ToString("c")</div>
                             </div>
                         </div>
                         <div class="row pl-2 my-3">
-                            <p class="text-secondary lh-sm">@Html.Raw(Model.Product.Description)</p>
+                            <p class="text-info lh-sm">@Html.Raw(Model.Product.Description)</p>
                         </div>
                         <div class="row pl-2 mb-3">
                             <div class="col-md-4">
